--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -71,21 +71,24 @@
     .main h1{
     text-align:center;
     text-transform: uppercase;
-    font-size: 3rem;
+    font-size: 2.8rem;
    
   }
     
     .roller{
-    height: 2.6rem; 
+     
+    height: 4rem; 
     line-height: 2.125rem;  
+    letter-spacing: 0.01rem;
     }
     
     #spare-time {
-      font-size: 1.5rem;
+      font-size: 1.3rem;
       letter-spacing: 0.1rem;
     }
     
     .roller #rolltext {  
+      font-size: 1.4rem;
     animation: slide-mob 7s infinite;  
   }
     
